v1.0.2 Release Support fields without any value. Add constructor, getter and setter for javaclass. Add more methods on JavaFields Change multilinecomentary from immutable to mutable array Fix static field names